tests/baselines/reference/tsxAttributeResolution11.errors.txt
tests/cases/conformance/jsx/file.tsx(11,10): error TS2322: Type '{ bar: string; }' is not assignable to type 'IntrinsicAttributes & { ref?: string; }'.
  Property 'bar' does not exist on type 'IntrinsicAttributes & { ref?: string; }'.


==== tests/cases/conformance/jsx/react.d.ts (0 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	}
    	interface ElementAttributesProperty {
    		props;
    	}
    	interface IntrinsicAttributes {
    		ref?: string;
    	}
    }
    
==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    class MyComponent {  
      render() {
      }
    
      props: {
    	  ref?: string;
      }
    }
    
    // Should be an OK
    var x = <MyComponent bar='world' />;
             ~~~~~~~~~~~
!!! error TS2322: Type '{ {|bar|0|}: string; }' is not assignable to type '{|IntrinsicAttributes|1|} & { {|ref|2|}?: string; }'.
!!! error TS2322:   Property 'bar' does not exist on type 'IntrinsicAttributes & { ref?: string; }'.
!!! annotated symbol 0 tests/cases/conformance/jsx/file.tsx:11:22
!!! annotated symbol 1 tests/cases/conformance/jsx/react.d.ts:8:12
!!! annotated symbol 2 tests/cases/conformance/jsx/file.tsx:6:4
    
    